--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
-.App {
-  text-align: center;
+/** @format */
+
+* {
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+	margin: 0;
+	font-family: "Poppins", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar {
+	width: 100%;
+	background-color: #fff;
+	height: 70px;
+	display: flex;
+	align-items: center;
+	padding: 0 1rem;
+	box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),
+		0px 1px 2px 0px rgba(0, 0, 0, 0.06);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar .nav-logo {
+	max-width: 100px;
+	max-height: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+section {
+	padding: 24px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hero {
+	display: flex;
+	flex-direction: column;
+}
+
+.hero img {
+	width: 500px;
+	align-self: center;
+}
+
+.hero h1 {
+	margin-bottom: 1px;
+}
+
+.hero p {
+	margin-top: 0;
+}
+.gray {
+	color: grey;
+	font-weight: 500;
+}
+.flexx {
+	display: flex;
+	overflow: scroll;
+	scroll-behavior: smooth;
+	overflow: -moz-scrollbars-none;
+	-ms-overflow-style: none;
+	scrollbar-width: none !important;
+}
+::-webkit-scrollbar {
+    display: none;
+}
+.card {
+  position: relative;
+	width: 175px;
+	font-size: 12px;
+	margin: 1rem;
+	flex: 0 0 auto;
+	display: flex;
+	flex-direction: column;
+}
+.soldout{
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: #fff;
+  padding: 5px 7px;
+  border-radius: 5px;
+  font-weight: bold;
+  color: rgb(194, 10, 10);
+}
+
+.card--title {
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+.card--img {
+	width: 100%;
+	border-radius: 10px;
+}
+
+.card--stat {
+	display: flex;
+}
+
+.star {
+	width: 14px;
 }
